--- a/index.html
+++ b/index.html
@@ -4,36 +4,199 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RPM Стрип-клуб</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <style>
+    /* Общие стили */
+    body {
+      background: linear-gradient(135deg, #1a0d2a 0%, #2e0f4b 100%);
+      color: #d8c7f9;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding-top: 40px;
+    }
+
+    /* Контейнер */
+    .container {
+      background: rgba(38, 16, 66, 0.8);
+      border-radius: 20px;
+      max-width: 850px;
+      width: 90%;
+      padding: 30px 40px;
+      box-shadow: 0 8px 25px rgba(147, 70, 255, 0.7);
+      backdrop-filter: blur(8px);
+      border: 1px solid rgba(147, 70, 255, 0.3);
+    }
+
+    /* Заголовки */
+    h1, h2, h3 {
+      color: #b38aff;
+      text-shadow: 0 0 6px #a66cff;
+      margin-bottom: 15px;
+    }
+
+    /* Текст */
+    p, ul {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #d8c7f9;
+    }
+
+    /* Ссылки и коды */
+    code {
+      background-color: #4b2980;
+      padding: 2px 6px;
+      border-radius: 5px;
+      font-family: monospace;
+      font-size: 0.9rem;
+      color: #d1bfff;
+    }
+
+    /* Кнопки и формы */
+    button, select, input {
+      background-color: #5c33cc;
+      color: #f1e7ff;
+      border: none;
+      padding: 12px 18px;
+      border-radius: 10px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      margin-top: 12px;
+      box-shadow: 0 0 8px rgba(92, 51, 204, 0.6);
+    }
+
+    button:hover, select:hover, input:hover {
+      background-color: #7e57ff;
+      box-shadow: 0 0 12px rgba(126, 87, 255, 0.9);
+    }
+
+    /* Поля ввода */
+    input[type="text"], input[type="datetime-local"], select {
+      width: 100%;
+      margin-top: 6px;
+      padding: 10px;
+      background-color: #3e1f6e;
+      color: #d8c7f9;
+      border: 1px solid #7e57ff;
+      box-shadow: inset 0 0 6px #5c33cc;
+      font-size: 1rem;
+      border-radius: 8px;
+      transition: border-color 0.3s ease;
+    }
+
+    input[type="text"]:focus, input[type="datetime-local"]:focus, select:focus {
+      border-color: #b38aff;
+      outline: none;
+      box-shadow: 0 0 10px #b38aff;
+    }
+
+    /* Навигация */
+    nav {
+      margin-bottom: 30px;
+    }
+
+    nav button {
+      margin-right: 15px;
+      font-weight: 600;
+    }
+
+    /* Карточки */
+    .card {
+      background: rgba(54, 22, 90, 0.75);
+      border-radius: 18px;
+      padding: 25px;
+      margin-bottom: 25px;
+      box-shadow: 0 0 15px rgba(147, 70, 255, 0.5);
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    /* Скрытие вкладок */
+    .tab {
+      display: none;
+    }
+
+    /* Отображение активной вкладки */
+    .tab.active {
+      display: block;
+    }
+
+    /* Цена */
+    #priceDisplay {
+      font-weight: 700;
+      font-size: 1.2rem;
+      margin-top: 15px;
+      color: #c4a7ff;
+      text-shadow: 0 0 4px #b38aff;
+    }
+
+    /* Список */
+    ul li {
+      margin-bottom: 10px;
+    }
+
+    /* Иконка корзины */
+    .cart-icon {
+      position: fixed;
+      top: 20px;
+      right: 30px;
+      background-color: #7e57ff;
+      padding: 15px;
+      border-radius: 50%;
+      box-shadow: 0 0 12px #b38aff;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      z-index: 1000;
+    }
+
+    .cart-icon:hover {
+      background-color: #a68eff;
+      box-shadow: 0 0 18px #d2b9ff;
+    }
+
+    .cart-icon svg {
+      fill: #fff;
+      width: 24px;
+      height: 24px;
+    }
+
+    /* Анимация плавного появления */
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+
+    .card, nav, .container, h1 {
+      animation: fadeIn 0.7s ease forwards;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <section class="welcome-message">
-      <h2>Добро пожаловать в RPM Стрип-клуб!</h2>
-      <p>Эксклюзивные услуги, атмосфера роскоши и индивидуальный подход к каждому клиенту.</p>
-      <p>Выбирайте из широкого спектра развлечений и получайте удовольствие, которого вы достойны.</p>
-    </section>
-
-    <h1>RPM Стрип-клуб</h1>
+    <h1>RPM Стрип-клуб — Услуги Onyx</h1>
 
     <nav>
       <button onclick="showSection('desc')">Описание</button>
       <button onclick="showSection('price')">Прайс</button>
-      <button onclick="showSection('order')">🛒</button>
+      <button onclick="showSection('order')">Оформление заказа</button>
       <button onclick="showSection('vip')">VIP Клиент</button>
     </nav>
 
-    <div id="desc" class="card tab">
+    <div id="desc" class="card tab active">
       <h2>Что на сайте</h2>
-      <p><strong>Сутенёр: someteaze</strong> представляет первый сайт по стрип-клубу.</p>
-      <p>Добро пожаловать в RPM Стрип-клуб — место, где ваши желания становятся реальностью и каждое мгновение наполнено страстью и эксклюзивным обслуживанием.</p>
-      <p>Здесь вы найдёте широкий спектр услуг от чувственных танцев до персонального внимания с полным погружением в атмосферу роскоши и удовольствия.</p>
-      <p>Связь:</p>
-      <ul>
-        <li>Дискорд: <code>wsometeazew</code></li>
-        <li>Телеграм: <code>@crips_someteaze</code></li>
-      </ul>
-      <p>Закажите услугу — и окунитесь в незабываемый опыт, который подарит только RPM Стрип-клуб!</p>
+      <p><strong>Сутенёр: someteaze</strong> представляет первый сайт по стрип-клубу.<br />
+        Связь:<br />
+        Дискорд: <code>wsometeazew</code><br />
+        Телеграм: <code>@crips_someteaze</code>
+      </p>
     </div>
 
     <div id="price" class="card tab">
@@ -41,25 +204,25 @@
       <button onclick="toggleTab('intim')">Интимные</button>
       <button onclick="toggleTab('extra')">Дополнительные</button>
 
-      <div id="intim" class="tab">
+      <div id="intim" class="tab" style="display:none;">
         <h3>💋 Интимные услуги</h3>
         <ul>
-          <li>Стандарт (1 час) — 40000</li>
-          <li>Минет — 25000</li>
-          <li>Женское доминирование — 38000</li>
-          <li>Подчинение — 80000</li>
-          <li>Шибари — 20000</li>
-          <li>BDSM — 40000</li>
+          <li>Стандарт (1 час) — 40000$</li>
+          <li>Минет — 25000$</li>
+          <li>Женское доминирование — 38000$</li>
+          <li>Подчинение — 80000$</li>
+          <li>Шибари — 20000$</li>
+          <li>BDSM — 40000$</li>
         </ul>
       </div>
 
-      <div id="extra" class="tab">
+      <div id="extra" class="tab" style="display:none;">
         <h3>💃 Дополнительные услуги</h3>
         <ul>
-          <li>Стриптиз / Приват-танец — 10000</li>
-          <li>Совместная ванна + массаж — 25000</li>
-          <li>Ночь со мной — 100000</li>
-          <li>Фото-/видеосъёмка + сопровождение — 80000</li>
+          <li>Стриптиз / Приват-танец — 10000$</li>
+          <li>Совместная ванна + массаж — 25000$</li>
+          <li>Ночь со мной — 100000$</li>
+          <li>Фото-/видеосъёмка + сопровождение — 80000$</li>
         </ul>
       </div>
     </div>
@@ -74,7 +237,7 @@
         <input type="text" name="rpm" required />
 
         <label>Выберите услугу:</label>
-        <select name="service" id="service">
+        <select name="service" id="service" required>
           <option value="Стандарт (1 час)">Стандарт (1 час)</option>
           <option value="Минет">Минет</option>
           <option value="Женское доминирование">Женское доминирование</option>
@@ -113,111 +276,34 @@
     </div>
   </div>
 
+  <!-- Иконка корзины -->
+  <div class="cart-icon" onclick="showSection('order')" title="Оформить заказ">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <path d="M7 18c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm10 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-12.824-3l1.58-9h14.484l-1.58 9h-14.484zm15.324-11h-17v2h1.647l3.65 20h12.606v-2h-11.955l-.735-4h13.822l1.395-8h-15.305z"/>
+    </svg>
+  </div>
+
   <script>
     const sections = document.querySelectorAll('.tab');
     function showSection(id) {
-      sections.forEach(section => (section.style.display = 'none'));
-      document.getElementById(id).style.display = 'block';
+      sections.forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
     }
     showSection('desc');
 
     function toggleTab(id) {
-      document.querySelectorAll('.card .tab').forEach(tab => (tab.style.display = 'none'));
-      document.getElementById(id).style.display = 'block';
+      const tabs = document.querySelectorAll('#price .tab');
+      tabs.forEach(t => t.style.display = 'none');
+      const el = document.getElementById(id);
+      if(el) el.style.display = 'block';
     }
 
     const servicePrices = {
-      'Стандарт (1 час)': 40000,
-      Минет: 25000,
-      'Женское доминирование': 38000,
-      Подчинение: 80000,
-      Шибари: 20000,
-      BDSM: 40000,
-      'Стриптиз / Приват-танец': 10000,
-      'Совместная ванна + массаж': 25000,
-      'Ночь со мной': 100000,
-      'Фото-/видеосъёмка + сопровождение': 80000,
-      'VIP Клиент': 200000
-    };
-
-    const orderForm = document.getElementById('orderForm');
-    const serviceSelect = document.getElementById('service');
-    const promoInput = document.getElementById('promo');
-    const priceDisplay = document.getElementById('priceDisplay');
-    const dateInput = document.getElementById('dateInput');
-    const labelDate = document.getElementById('label-date');
-    const labelPromo = document.getElementById('label-promo');
-
-    function updatePrice() {
-      const selectedService = serviceSelect.value;
-      const basePrice = servicePrices[selectedService] || 0;
-      const promo = promoInput.value.trim();
-      let finalPrice = basePrice;
-      let promoText = '';
-
-      if (promo === 'ONYX-2025-ELITE-XR') {
-        finalPrice = basePrice * 0.9;
-        promoText = ' (с применением промокода -10%)';
-      }
-
-      priceDisplay.textContent = `Цена: ${finalPrice.toLocaleString()}$` + promoText;
-
-      // Скрывать дату и промокод, если выбран VIP Клиент
-      if (selectedService === 'VIP Клиент') {
-        dateInput.style.display = 'none';
-        labelDate.style.display = 'none';
-        promoInput.style.display = 'none';
-        labelPromo.style.display = 'none';
-      } else {
-        dateInput.style.display = 'block';
-        labelDate.style.display = 'block';
-        promoInput.style.display = 'block';
-        labelPromo.style.display = 'block';
-      }
-    }
-
-    serviceSelect.addEventListener('change', updatePrice);
-    promoInput.addEventListener('input', updatePrice);
-
-    orderForm.addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const data = new FormData(orderForm);
-
-      const promo = data.get('promo').trim();
-      const service = data.get('service');
-      const basePrice = servicePrices[service] || 0;
-      let finalPrice = basePrice;
-      let discountMsg = '';
-
-      if (promo === 'ONYX-2025-ELITE-XR') {
-        finalPrice = Math.floor(basePrice * 0.9);
-        discountMsg = '\n(Промокод применён: -10%)';
-      }
-
-      let content = `НОВЫЙ ЗАКАЗ <@&1371644238349205535>\nDiscord: ${data.get('discord')}\nRPM: ${data.get('rpm')}\nУслуга: ${service}\n`;
-
-      if (service !== 'VIP Клиент') {
-        content += `Дата: ${data.get('date')}\n`;
-      }
-
-      content += `Цена: ${finalPrice.toLocaleString()}$${discountMsg}`;
-
-      await fetch(
-        'https://discord.com/api/webhooks/1377196690099933279/o4XKVX179xTD6IV9FIG-kRg9w_t8XDlBG_xewTh2uRVLJfxvgzUpJtS6rFwOw5eXSID1',
-        {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ content })
-        }
-      );
-
-      alert('Заказ отправлен. Ожидайте подтверждения в Discord.');
-      orderForm.reset();
-      updatePrice();
-      showSection('desc');
-    });
-
-    updatePrice();
-  </script>
-</body>
-</html>
+      "Стандарт (1 час)": 40000,
+      "Минет": 25000,
+      "Женское доминирование": 38000,
+      "Подчинение": 80000,
+      "Шибари": 20000,
+      "BDSM": 40000,
+      "Стриптиз / Приват-танец": 10000,
+      "Совместная ванна + массаж":
