--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>RPM Стрип-клуб</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <style>
-    /* Общие стили */
     body {
       background: linear-gradient(135deg, #1a0d2a 0%, #2e0f4b 100%);
       color: #d8c7f9;
@@ -19,8 +18,6 @@
       align-items: flex-start;
       padding-top: 40px;
     }
-
-    /* Контейнер */
     .container {
       background: rgba(38, 16, 66, 0.8);
       border-radius: 20px;
@@ -31,22 +28,16 @@
       backdrop-filter: blur(8px);
       border: 1px solid rgba(147, 70, 255, 0.3);
     }
-
-    /* Заголовки */
     h1, h2, h3 {
       color: #b38aff;
       text-shadow: 0 0 6px #a66cff;
       margin-bottom: 15px;
     }
-
-    /* Текст */
     p, ul {
       font-size: 1rem;
       line-height: 1.6;
       color: #d8c7f9;
     }
-
-    /* Ссылки и коды */
     code {
       background-color: #4b2980;
       padding: 2px 6px;
@@ -55,8 +46,6 @@
       font-size: 0.9rem;
       color: #d1bfff;
     }
-
-    /* Кнопки и формы */
     button, select, input {
       background-color: #5c33cc;
       color: #f1e7ff;
@@ -69,13 +58,10 @@
       margin-top: 12px;
       box-shadow: 0 0 8px rgba(92, 51, 204, 0.6);
     }
-
     button:hover, select:hover, input:hover {
       background-color: #7e57ff;
       box-shadow: 0 0 12px rgba(126, 87, 255, 0.9);
     }
-
-    /* Поля ввода */
     input[type="text"], input[type="datetime-local"], select {
       width: 100%;
       margin-top: 6px;
@@ -88,24 +74,18 @@
       border-radius: 8px;
       transition: border-color 0.3s ease;
     }
-
     input[type="text"]:focus, input[type="datetime-local"]:focus, select:focus {
       border-color: #b38aff;
       outline: none;
       box-shadow: 0 0 10px #b38aff;
     }
-
-    /* Навигация */
     nav {
       margin-bottom: 30px;
     }
-
     nav button {
       margin-right: 15px;
       font-weight: 600;
     }
-
-    /* Карточки */
     .card {
       background: rgba(54, 22, 90, 0.75);
       border-radius: 18px;
@@ -114,22 +94,15 @@
       box-shadow: 0 0 15px rgba(147, 70, 255, 0.5);
       transition: transform 0.3s ease;
     }
-
     .card:hover {
       transform: translateY(-5px);
     }
-
-    /* Скрытие вкладок */
     .tab {
       display: none;
     }
-
-    /* Отображение активной вкладки */
     .tab.active {
       display: block;
     }
-
-    /* Цена */
     #priceDisplay {
       font-weight: 700;
       font-size: 1.2rem;
@@ -137,13 +110,9 @@
       color: #c4a7ff;
       text-shadow: 0 0 4px #b38aff;
     }
-
-    /* Список */
     ul li {
       margin-bottom: 10px;
     }
-
-    /* Иконка корзины */
     .cart-icon {
       position: fixed;
       top: 20px;
@@ -156,24 +125,19 @@
       transition: background-color 0.3s ease;
       z-index: 1000;
     }
-
     .cart-icon:hover {
       background-color: #a68eff;
       box-shadow: 0 0 18px #d2b9ff;
     }
-
     .cart-icon svg {
       fill: #fff;
       width: 24px;
       height: 24px;
     }
-
-    /* Анимация плавного появления */
     @keyframes fadeIn {
       from {opacity: 0; transform: translateY(20px);}
       to {opacity: 1; transform: translateY(0);}
     }
-
     .card, nav, .container, h1 {
       animation: fadeIn 0.7s ease forwards;
     }
@@ -201,10 +165,12 @@
 
     <div id="price" class="card tab">
       <h2>Категории услуг</h2>
-      <button onclick="toggleTab('intim')">Интимные</button>
-      <button onclick="toggleTab('extra')">Дополнительные</button>
+      <div style="margin-bottom: 15px;">
+        <button onclick="showPriceCategory('intim')">Интимные</button>
+        <button onclick="showPriceCategory('extra')">Дополнительные</button>
+      </div>
 
-      <div id="intim" class="tab" style="display:none;">
+      <div id="intim" class="price-category">
         <h3>💋 Интимные услуги</h3>
         <ul>
           <li>Стандарт (1 час) — 40000$</li>
@@ -216,7 +182,7 @@
         </ul>
       </div>
 
-      <div id="extra" class="tab" style="display:none;">
+      <div id="extra" class="price-category" style="display:none;">
         <h3>💃 Дополнительные услуги</h3>
         <ul>
           <li>Стриптиз / Приват-танец — 10000$</li>
@@ -276,7 +242,6 @@
     </div>
   </div>
 
-  <!-- Иконка корзины -->
   <div class="cart-icon" onclick="showSection('order')" title="Оформить заказ">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path d="M7 18c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm10 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-12.824-3l1.58-9h14.484l-1.58 9h-14.484zm15.324-11h-17v2h1.647l3.65 20h12.606v-2h-11.955l-.735-4h13.822l1.395-8h-15.305z"/>
@@ -291,13 +256,15 @@
     }
     showSection('desc');
 
-    function toggleTab(id) {
-      const tabs = document.querySelectorAll('#price .tab');
-      tabs.forEach(t => t.style.display = 'none');
-      const el = document.getElementById(id);
-      if(el) el.style.display = 'block';
+    function showPriceCategory(catId) {
+      const cats = document.querySelectorAll('.price-category');
+      cats.forEach(c => c.style.display = 'none');
+      const cat = document.getElementById(catId);
+      if(cat) cat.style.display = 'block';
     }
+    showPriceCategory('intim');
 
+    // Цены по услугам
     const servicePrices = {
       "Стандарт (1 час)": 40000,
       "Минет": 25000,
@@ -306,4 +273,51 @@
       "Шибари": 20000,
       "BDSM": 40000,
       "Стриптиз / Приват-танец": 10000,
-      "Совместная ванна + массаж":
+      "Совместная ванна + массаж": 25000,
+      "Ночь со мной": 100000,
+      "Фото-/видеосъёмка + сопровождение": 80000,
+      "VIP Клиент": 200000
+    };
+
+    const serviceSelect = document.getElementById('service');
+    const priceDisplay = document.getElementById('priceDisplay');
+    const dateInput = document.getElementById('dateInput');
+    const promoInput = document.getElementById('promo');
+    const labelDate = document.getElementById('label-date');
+    const labelPromo = document.getElementById('label-promo');
+
+    function updatePriceAndFields() {
+      const service = serviceSelect.value;
+      priceDisplay.textContent = `Цена: ${servicePrices[service]}$`;
+
+      // Для VIP Клиент убираем дату и промокод
+      if(service === "VIP Клиент") {
+        dateInput.style.display = 'none';
+        promoInput.style.display = 'none';
+        labelDate.style.display = 'none';
+        labelPromo.style.display = 'none';
+        dateInput.required = false;
+      } else {
+        dateInput.style.display = 'block';
+        promoInput.style.display = 'block';
+        labelDate.style.display = 'block';
+        labelPromo.style.display = 'block';
+        dateInput.required = true;
+      }
+    }
+
+    serviceSelect.addEventListener('change', updatePriceAndFields);
+
+    updatePriceAndFields();
+
+    // Отправка формы — здесь только заглушка, можно расширять
+    const orderForm = document.getElementById('orderForm');
+    orderForm.addEventListener('submit', e => {
+      e.preventDefault();
+      alert('Спасибо за заказ! В ближайшее время с вами свяжутся.');
+      orderForm.reset();
+      updatePriceAndFields();
+    });
+  </script>
+</body>
+</html>
